<?xml version="1.0" encoding="utf-8"?>
<!--
    Main menu for AndrOBD application
    Provides access to key features in a logical grouping:
    - Connection management (Connect/Disconnect)
    - Data operations (Save/Load measurements)
    - Application settings and customization
    - OBD diagnostic services (submenu)
    
    Compatible with Android 4.1+ (API 16+) using standard Android menu components
    for maximum compatibility and maintainability.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Connection Management Group -->
    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/action_connect"
        android:title="@string/action_connect"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/disconnect"
        android:icon="@drawable/action_disconnect"
        android:title="@string/disconnect"
        android:visible="false"
        app:showAsAction="always" />

    <!-- Data Management Group -->
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:title="@string/save" />
    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_action_load"
        android:title="@string/load" />

    <!-- Display and View Options -->
    <item
        android:id="@+id/day_night_mode"
        android:icon="@drawable/ic_daynight"
        android:title="@string/day_night_mode" />

    <!-- Configuration and Management -->
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />
    <item
        android:id="@+id/plugin_manager"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/plugin_manager" />
    <item
        android:id="@+id/reset_preselections"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_preselections" />

    <!-- OBD Diagnostic Services (Primary feature access) -->
    <item
        android:id="@+id/obd_services"
        android:icon="@android:drawable/ic_menu_more"
        android:enabled="false"
        android:title="@string/obd_services"
        app:showAsAction="ifRoom">
        <menu>
            <!-- submenu: obd_service.xml - Contains diagnostic functions -->
        </menu>
    </item>
</menu>
